cambios y agregar nuevo proyecto

--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -28,7 +28,31 @@
     <div class="container-presentacion">
       <div class="presentacion">
         <h1 class ="texto-presentacion">QUIÉN SOY?</h1>
-        <p class ="texto-presentacion">Soy Rogger Lindao, desarrollador con experiencia en .NET, Python, JavaScript y SQL Server. Especialista en soluciones escalables, busco nuevos desafíos para contribuir al éxito del equipo.</p>
+        <div class ="texto-presentacion">
+          <p >Soy Rogger Lindao, desarrollador con experiencia en el desarrollo web y aplicaciones escalables y mantenibles, siempre estoy en busqued de nuevos desafios.</p>
+          <p>Entre mis principales tecnologias estan :</p>
+          <p>Backend:</p>
+          <ul>
+            <li>.NET</li>
+            <li>Python</li>
+          </ul>
+          <p>Frontend:</p>
+          <ul>
+            <li>Angular</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>.NET</li>
+            <li>Python</li>
+            <li>SQL Server</li>
+            <li>Postgres</li>
+          </ul>
+          <p>Bases de Datos:</p>
+          <ul>
+            <li>SQL Server</li>
+            <li>Postgres</li>
+          </ul>
+        </div>
       </div>
       <img class="img-icon-presentacion item-presentacion3" src="assets/img/icon/devIcon.svg">
     </div>
