--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -29,7 +29,7 @@
       <div class="presentacion">
         <h1 class ="texto-presentacion">QUIÉN SOY?</h1>
         <div class ="texto-presentacion">
-          <p >Soy Rogger Lindao, desarrollador con experiencia en el desarrollo web y aplicaciones escalables y mantenibles, siempre estoy en busqued de nuevos desafios.</p>
+          <p >Soy Rogger Lindao, desarrollador con experiencia en el desarrollo web y aplicaciones escalables y mantenibles, siempre estoy en busqueda de nuevos desafios.</p>
           <p>Entre mis principales tecnologias estan :</p>
           <p>Backend:</p>
           <ul>
@@ -42,10 +42,6 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
-            <li>.NET</li>
-            <li>Python</li>
-            <li>SQL Server</li>
-            <li>Postgres</li>
           </ul>
           <p>Bases de Datos:</p>
           <ul>
