Cambio de archivo para java

--- a/src/app/comp-inicio/comp-inicio.component.html
+++ b/src/app/comp-inicio/comp-inicio.component.html
@@ -35,6 +35,7 @@
           <ul>
             <li>.NET</li>
             <li>Python</li>
+            <li>Java</li>
           </ul>
           <p>Frontend:</p>
           <ul>
